--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -64,6 +64,15 @@ table {
           box-sizing: border-box;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
